tests/ui/suggestions/const-in-struct-pat.stderr
error[E0308]: mismatched types
  --> $DIR/const-in-struct-pat.rs:8:17
   |
LL | struct foo;
   | ---------- unit struct defined here
...
LL |     let Thing { foo } = t;
   |                 ^^^     - this expression has type `Thing`
   |                 |
   |                 expected `String`, found `foo`
   |                 `foo` is interpreted as a unit struct, not a new binding
   |
help: bind the struct field to a different name instead
   |
LL |     let Thing { foo: other_foo } = t;
   |                    +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
